Revert "Change version to Java 8"
This reverts commit f2683c37